src/components/navigation/navigation.css
.Navigation {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;

    height: 80px;
    width: 100%;
}

.logo {
    font-size: 30px;
    margin-left: 40px;
    color: rgba(255, 255, 255, 0.925);
}

.logo-image {
    height: 50px;
}

.links {
    max-width: 400px;
    width: 100%;

    margin-right: 40px;
}

a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.616);

    font-size: 15px;
}

a:hover {
    color: white;
}

ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;

    list-style: none;
    color: white;
}

li {
    position: relative;
    color: rgba(255, 255, 255, 0.7);
}

li:hover {
    color: rgba(255, 255, 255, 1);
}

.activeline::after {
    content: "";
    display: block;
    height: 2px;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.863);
    
    position: absolute;
    width: 0%;
    transition: all ease-in-out 200ms;
}

.activeline:hover::after {
    width: 100%;
  }

  .hidden {
    display: none;
}

.closed {
    position: absolute;
    right: -60%;
}

@media (max-width: 600px) {

    .logo-image {
        height: 35px;
    }

    .menu-button {
        background-color: transparent;
        border: none;
        color: rgba(255, 255, 255, 0.7);

        cursor: pointer;

        font-size: 20px;
    }

    .menu-button:hover {
        color: rgba(255, 255, 255, 1);
    }

    .close-button {
        margin-left: 20px;
        margin-top: 20px;
        border: none; 

        color: white;
        font-size: 20px;

        cursor: pointer;

        background-color: transparent;
    }

    .close-button:hover {
        color: rgba(255, 255, 255, 1);
        scale: 115%;
    }

    .menu {
        position: absolute;

        display: flex;
        flex-direction: column;
        align-items: start;
        justify-content: start;

        gap: 80px;

        height: 100vh;
        width: 60%;
        right: 0;
        top: 0;

        transition: 0.4s;

        background-color: rgba(0, 0, 0, 0.849);

        z-index: 10;
    }

    .menu ul {
        display: flex;
        flex-direction: column;
        gap: 30px;
    }

    .menu ul li a {
        display: flex;
        flex-direction: row;
        gap: 30px;

        transition: 0.3s;

        color: white;
    }

    .menu ul li a:hover {
        scale: 110%;
    }

    .closed {
        width: 0px;
        overflow: hidden;
    }



    .logo {
        font-weight: 400;
        font-size: 26px;
    }

    .show {
        display: none;
    }

    .hidden {
        display: flex;
        justify-content: flex-end;
    }

    .links {
        max-width: 80px;
    }

    a {
        font-size: 20px;
    }
}

